[package]
name = "open_ttt_lib"
version = "0.1.0"
authors = ["James Richey"]
license = "MIT"
description = "Library that provides common Tic Tac Toe logic."
repository = "https://github.com/j-richey/open_ttt_lib.git"
homepage = "https://github.com/j-richey/open_ttt_lib"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
