[package]
name = "open_ttt_lib"
version = "0.1.2"
authors = ["James Richey <james.richey+open_ttt_lib@imaginaryphase.com>"]
license = "MIT"
description = "Library that provides common Tic Tac Toe logic."
repository = "https://github.com/j-richey/open_ttt_lib.git"
homepage = "https://github.com/j-richey/open_ttt_lib"
documentation = "https://docs.rs/open_ttt_lib"
readme = "README.md"
edition = "2018"

[dependencies]
rand = "0.7.2"
doc-comment = "0.3.1"

[dev-dependencies]
criterion = "0.3.0"
version-sync = "0.8"

[[bench]]
name = "benchmarks"
harness = false
